enriching data with etherscan and web3.py

--- a/gather_data.ipynb
+++ b/gather_data.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "import requests\n",
+    "import time\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import uuid\n",
@@ -16,16 +17,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_raw = pd.read_csv('blocks.csv')\n",
-    "df_raw.drop(columns=['transactions'], inplace=True)\n",
-    "df_raw.sort_values(by='block_number', ascending=True, inplace=True)\n",
-    "df_raw.reset_index(drop=True, inplace=True)\n",
-    "df_raw.to_csv('blocks.csv', index=False)"
+    "FOLDER = './'\n",
+    "\n",
+    "def build_payload():\n",
+    "    PAYLOAD = 'https://blocks.flashbots.net/v1/blocks' \\\n",
+    "             + '?limit=9999'\n",
+    "    return PAYLOAD\n",
+    "\n",
+    "def send_payload(payload):\n",
+    "    try:\n",
+    "        response = requests.get(payload)\n",
+    "\n",
+    "        raw = response.json()\n",
+    "        raw = raw['blocks']\n",
+    "\n",
+    "    except:\n",
+    "        time.sleep(5)\n",
+    "        return send_payload(payload)\n",
+    "\n",
+    "    return raw"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'https://blocks.flashbots.net/v1/blocks?limit=5'"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -33,16 +66,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "url = f'https://blocks.flashbots.net/v1/blocks?limit=5000'\n",
-    "\n",
-    "response = requests.get(url)\n",
-    "\n",
-    "raw = response.json()\n",
-    "raw = raw['blocks']\n",
+    "payload = build_payload()\n",
+    "raw = send_payload(payload)\n",
     "\n",
     "df_raw = pd.DataFrame.from_dict(raw)\n",
+    "\n",
+    "df_raw.drop(columns=['transactions'], inplace=True)\n",
     "df_raw.sort_values(by='block_number', ascending=True, inplace=True)\n",
     "df_raw.reset_index(drop=True, inplace=True)\n",
+    "df_raw.to_csv('blocks.csv', mode='a', index=False, header=False)\n",
     "\n",
     "\n",
     "def create_transactions(raw):\n",
@@ -56,33 +88,14 @@
     "txn = create_transactions(raw)\n",
     "df_txn = pd.DataFrame.from_dict(txn)\n",
     "\n",
-    "df_txn.to_csv('txn.csv', mode='a', index=False)\n",
+    "df_txn.to_csv('txn.csv', mode='a', index=False, header=False)\n",
     "\n",
-    "df_raw.drop(columns=['transactions'])\n",
-    "df_raw.to_csv('blocks.csv', mode='a', index=False)\n",
+    "\n",
+    "\n",
     "\n",
     "\n",
     "\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "temp = pd.read_csv('txn.csv')\n",
-    "temp.drop_duplicates(keep='first', inplace=True)\n",
-    "temp.sort_values(by='block_number', ascending=True, inplace=True)\n",
-    "temp.reset_index(drop=True, inplace=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
