--- a/gather_data.ipynb
+++ b/gather_data.ipynb
@@ -17,15 +17,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "FOLDER = './'\n",
     "\n",
-    "def build_payload():\n",
+    "def build_payload(limit):\n",
     "    PAYLOAD = 'https://blocks.flashbots.net/v1/blocks' \\\n",
-    "             + '?limit=9999'\n",
+    "             + f'?limit={limit}'\n",
     "    return PAYLOAD\n",
     "\n",
     "def send_payload(payload):\n",
@@ -36,7 +36,7 @@
     "        raw = raw['blocks']\n",
     "\n",
     "    except:\n",
-    "        time.sleep(5)\n",
+    "        time.sleep(59)\n",
     "        return send_payload(payload)\n",
     "\n",
     "    return raw"
@@ -44,29 +44,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'https://blocks.flashbots.net/v1/blocks?limit=5'"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
-    "payload = build_payload()\n",
+    "payload = build_payload(7500)\n",
+    "\n",
     "raw = send_payload(payload)\n",
     "\n",
     "df_raw = pd.DataFrame.from_dict(raw)\n",
