--- a/gather_data.ipynb
+++ b/gather_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,20 +44,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "payload = build_payload(7500)\n",
+    "payload = build_payload(5)\n",
     "\n",
     "raw = send_payload(payload)\n",
     "\n",
-    "df_raw = pd.DataFrame.from_dict(raw)\n",
+    "df_block = pd.DataFrame.from_dict(raw)\n",
     "\n",
-    "df_raw.drop(columns=['transactions'], inplace=True)\n",
-    "df_raw.sort_values(by='block_number', ascending=True, inplace=True)\n",
-    "df_raw.reset_index(drop=True, inplace=True)\n",
-    "df_raw.to_csv('blocks.csv', mode='a', index=False, header=False)\n",
+    "df_block.drop(columns=['transactions'], inplace=True)\n",
+    "df_block.sort_values(by='block_number', ascending=True, inplace=True)\n",
+    "df_block.reset_index(drop=True, inplace=True)\n",
+    "#df_raw.to_csv('blocks.csv', mode='a', index=False)\n",
     "\n",
     "\n",
     "def create_transactions(raw):\n",
@@ -71,7 +71,7 @@
     "txn = create_transactions(raw)\n",
     "df_txn = pd.DataFrame.from_dict(txn)\n",
     "\n",
-    "df_txn.to_csv('txn.csv', mode='a', index=False, header=False)\n",
+    "#df_txn.to_csv('txn.csv', mode='a', index=False)\n",
     "\n",
     "\n",
     "\n",
