rerun; deleted statistics. Implement montecarlo.

--- a/searching.ipynb
+++ b/searching.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "68f68a99",
+   "execution_count": 38,
+   "id": "90ae4f66",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "aa9e1c6a",
+   "id": "aa89dac7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,8 +43,323 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 37,
+   "id": "c483db6e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>slot</th>\n",
+       "      <th>block_hash</th>\n",
+       "      <th>block_reward</th>\n",
+       "      <th>gas_used</th>\n",
+       "      <th>validator_pubkey</th>\n",
+       "      <th>builder_pubkey</th>\n",
+       "      <th>builder_name</th>\n",
+       "      <th>relay_name</th>\n",
+       "      <th>boosted</th>\n",
+       "      <th>count</th>\n",
+       "      <th>position</th>\n",
+       "      <th>epoch</th>\n",
+       "      <th>date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>4700013</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No builder</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1663224179</td>\n",
+       "      <td>2022-09-15 06:42:59+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>4700014</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No builder</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1663224191</td>\n",
+       "      <td>2022-09-15 06:43:11+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>4700015</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No builder</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1663224203</td>\n",
+       "      <td>2022-09-15 06:43:23+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4700016</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No builder</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1663224215</td>\n",
+       "      <td>2022-09-15 06:43:35+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4700017</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No builder</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1663224227</td>\n",
+       "      <td>2022-09-15 06:43:47+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>886738</th>\n",
+       "      <td>5586751</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No builder</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1673865035</td>\n",
+       "      <td>2023-01-16 10:30:35+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>886739</th>\n",
+       "      <td>5586752</td>\n",
+       "      <td>0xad1be4394d52d6f848baa216ccfac0b250cd51f5a4a2...</td>\n",
+       "      <td>0.045863</td>\n",
+       "      <td>25229702.0</td>\n",
+       "      <td>0xa7b4840468fbd50602db4cf35a56af9ea11fffac41b5...</td>\n",
+       "      <td>0x9000009807ed12c1f08bf4e81c6da3ba8e3fc3d95389...</td>\n",
+       "      <td>blocknative</td>\n",
+       "      <td>Blocknative</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1673865047</td>\n",
+       "      <td>2023-01-16 10:30:47+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>886740</th>\n",
+       "      <td>5586753</td>\n",
+       "      <td>0xff6dbe03e2510fa1430e12a2f2746f4ffc440ea8f1d2...</td>\n",
+       "      <td>0.015468</td>\n",
+       "      <td>13140362.0</td>\n",
+       "      <td>0x89fd95e3bb0da3d02ca91285c334a1b57f2e22547fef...</td>\n",
+       "      <td>0xa971c4ee4ac5d47e0fb9e16be05981bfe51458f14c06...</td>\n",
+       "      <td>builder0x69</td>\n",
+       "      <td>Flashbots</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1673865059</td>\n",
+       "      <td>2023-01-16 10:30:59+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>886741</th>\n",
+       "      <td>5586754</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>No builder</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1673865071</td>\n",
+       "      <td>2023-01-16 10:31:11+00:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>886742</th>\n",
+       "      <td>5586755</td>\n",
+       "      <td>0xadd1f3c9daf25e57a49f34ce8aa9acd51816395cc194...</td>\n",
+       "      <td>0.024059</td>\n",
+       "      <td>10850676.0</td>\n",
+       "      <td>0xad529b90e01cb5de1dfb8d169d4cfc2d8c9b8e46a63c...</td>\n",
+       "      <td>0x96a59d355b1f65e270b29981dd113625732539e955a1...</td>\n",
+       "      <td>beaverbuild.org</td>\n",
+       "      <td>Flashbots</td>\n",
+       "      <td>True</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1673865083</td>\n",
+       "      <td>2023-01-16 10:31:23+00:00</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>886743 rows × 13 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           slot                                         block_hash  \\\n",
+       "0       4700013                                                NaN   \n",
+       "1       4700014                                                NaN   \n",
+       "2       4700015                                                NaN   \n",
+       "3       4700016                                                NaN   \n",
+       "4       4700017                                                NaN   \n",
+       "...         ...                                                ...   \n",
+       "886738  5586751                                                NaN   \n",
+       "886739  5586752  0xad1be4394d52d6f848baa216ccfac0b250cd51f5a4a2...   \n",
+       "886740  5586753  0xff6dbe03e2510fa1430e12a2f2746f4ffc440ea8f1d2...   \n",
+       "886741  5586754                                                NaN   \n",
+       "886742  5586755  0xadd1f3c9daf25e57a49f34ce8aa9acd51816395cc194...   \n",
+       "\n",
+       "        block_reward    gas_used  \\\n",
+       "0                NaN         NaN   \n",
+       "1                NaN         NaN   \n",
+       "2                NaN         NaN   \n",
+       "3                NaN         NaN   \n",
+       "4                NaN         NaN   \n",
+       "...              ...         ...   \n",
+       "886738           NaN         NaN   \n",
+       "886739      0.045863  25229702.0   \n",
+       "886740      0.015468  13140362.0   \n",
+       "886741           NaN         NaN   \n",
+       "886742      0.024059  10850676.0   \n",
+       "\n",
+       "                                         validator_pubkey  \\\n",
+       "0                                                     NaN   \n",
+       "1                                                     NaN   \n",
+       "2                                                     NaN   \n",
+       "3                                                     NaN   \n",
+       "4                                                     NaN   \n",
+       "...                                                   ...   \n",
+       "886738                                                NaN   \n",
+       "886739  0xa7b4840468fbd50602db4cf35a56af9ea11fffac41b5...   \n",
+       "886740  0x89fd95e3bb0da3d02ca91285c334a1b57f2e22547fef...   \n",
+       "886741                                                NaN   \n",
+       "886742  0xad529b90e01cb5de1dfb8d169d4cfc2d8c9b8e46a63c...   \n",
+       "\n",
+       "                                           builder_pubkey     builder_name  \\\n",
+       "0                                                     NaN       No builder   \n",
+       "1                                                     NaN       No builder   \n",
+       "2                                                     NaN       No builder   \n",
+       "3                                                     NaN       No builder   \n",
+       "4                                                     NaN       No builder   \n",
+       "...                                                   ...              ...   \n",
+       "886738                                                NaN       No builder   \n",
+       "886739  0x9000009807ed12c1f08bf4e81c6da3ba8e3fc3d95389...      blocknative   \n",
+       "886740  0xa971c4ee4ac5d47e0fb9e16be05981bfe51458f14c06...      builder0x69   \n",
+       "886741                                                NaN       No builder   \n",
+       "886742  0x96a59d355b1f65e270b29981dd113625732539e955a1...  beaverbuild.org   \n",
+       "\n",
+       "         relay_name boosted  count  position       epoch  \\\n",
+       "0               NaN     NaN      1         1  1663224179   \n",
+       "1               NaN     NaN      1         1  1663224191   \n",
+       "2               NaN     NaN      1         1  1663224203   \n",
+       "3               NaN     NaN      1         1  1663224215   \n",
+       "4               NaN     NaN      1         1  1663224227   \n",
+       "...             ...     ...    ...       ...         ...   \n",
+       "886738          NaN     NaN      1         1  1673865035   \n",
+       "886739  Blocknative    True      1         1  1673865047   \n",
+       "886740    Flashbots    True      1         1  1673865059   \n",
+       "886741          NaN     NaN      1         1  1673865071   \n",
+       "886742    Flashbots    True      1         1  1673865083   \n",
+       "\n",
+       "                            date  \n",
+       "0      2022-09-15 06:42:59+00:00  \n",
+       "1      2022-09-15 06:43:11+00:00  \n",
+       "2      2022-09-15 06:43:23+00:00  \n",
+       "3      2022-09-15 06:43:35+00:00  \n",
+       "4      2022-09-15 06:43:47+00:00  \n",
+       "...                          ...  \n",
+       "886738 2023-01-16 10:30:35+00:00  \n",
+       "886739 2023-01-16 10:30:47+00:00  \n",
+       "886740 2023-01-16 10:30:59+00:00  \n",
+       "886741 2023-01-16 10:31:11+00:00  \n",
+       "886742 2023-01-16 10:31:23+00:00  \n",
+       "\n",
+       "[886743 rows x 13 columns]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
-   "id": "f98adb48",
+   "id": "a233e778",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +371,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21105d00",
+   "id": "a33602d1",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -64,7 +379,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "2568bc56",
+   "id": "51087d97",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +389,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0a6f695f",
+   "id": "3fade3be",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +415,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "0d803409",
+   "id": "d4e7c147",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +425,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "dd7e2936",
+   "id": "62b757dd",
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "963f7362",
+   "id": "c2a4895e",
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +793,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "7871dbcf",
+   "id": "055fde48",
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +814,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "e3030ab9",
+   "id": "db000928",
    "metadata": {},
    "outputs": [
     {
@@ -825,8 +1140,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
-   "id": "bea3be0b",
+   "execution_count": 44,
+   "id": "5a31408c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -835,8 +1150,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "712e91a9",
+   "execution_count": 45,
+   "id": "3b633593",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_b.sort_values('slot', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "id": "413eaa23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "499"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_b['slot'].iloc[-1]-df_b['slot'].iloc[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "5111bb27",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "804.376753507014"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(df_b)/499"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "9de5f167",
    "metadata": {},
    "outputs": [
     {
@@ -1654,7 +2021,7 @@
        "183274  Flashbots  https://0xac6e77dfe25ecd6110b8e780608cce0dab71...  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1667,7 +2034,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e676a52",
+   "id": "f0a48695",
    "metadata": {},
    "outputs": [],
    "source": []
